# django-djanbee

./: .gitignore  LICENSE  pyproject.toml
src/djanbee/: cli.py
src/djanbee.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/djanbee/commands/: __init__.py
src/djanbee/commands/configure/: configure_database_display.py  configure_database_manager.py  configure_settings_display.py  configure_settings_manager.py  container.py
src/djanbee/commands/launch/: container.py  display.py  manager.py
src/djanbee/commands/setup/: display.py  manager.py
src/djanbee/core/: container.py
src/djanbee/managers/: __init__.py  console_manager.py  database_manager.py  django_manager(OLD).py  os_manager.py
src/djanbee/managers/django_manager/: container.py  state.py
src/djanbee/managers/django_manager/services/: project_service.py  requirements_service.py  settings_service.py  venv_service.py
src/djanbee/managers/django_manager/services/settings_operations/: databases_handler.py  secret_key_handler.py  static_root_handler.py  static_root_handler_display.py
src/djanbee/managers/mixins/project_search/: __init__.py  display_mixin.py  mixin.py
src/djanbee/managers/os_manager/: base.py  main.py
src/djanbee/managers/os_manager/os_implementations/: unix.py  windows.py
src/djanbee/widgets/: checkbox_selector.py  create_delete_chekbox_selector.py  list_selector.py  question_selector.py  text_input.py
tests/: run_tests.py
tests/managers/os_manager/: test_search_subfolders.py
(+4 files in other folders)
