[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "djanbee"
version = "0.1.0"
description = "Django server deployment tool"
authors = [{name = "Linards Liepenieks", email = "linardsliepenieks@gmail.com"}]
requires-python = ">=3.8"
dependencies = [
   "click>=8.0.0",
   "rich>=10.0.0"
]

[project.scripts]
djanbee = "djanbee.cli:cli"

[tool.setuptools]
package-dir = {"" = "src"}

[project.optional-dependencies]
dev = [
    "black",
]
